Fix alignment issue on smaller screens

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -288,7 +288,7 @@ img {
   }
 
   .more-videos {
-    grid-template-columns: 100vw;
+    /* grid-template-columns: 100vw; */
   }
 }
 
@@ -300,7 +300,7 @@ img {
   }
 
   .more-videos {
-    grid-template-columns: 100vw;
+    /* grid-template-columns: 100vw; */
     /* grid-auto-flow: row; */
   }
 }
